--- a/Surreal.Cli/Surreal.Cli.csproj
+++ b/Surreal.Cli/Surreal.Cli.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Surreal\Surreal.csproj" />
+  </ItemGroup>
+
 </Project>
